--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
                   <ul class="ul">
                   <li><a target="_blank" href="game/tv/index.html"><b>我的影视网-暂时停用✖</b></a></li>
                   </ul>
+                  <ul class="ul">
+                      <li><a target="_blank" href="game/tv/jiexi"><b>影视解析—文字or链接🗡</b></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
