--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
                   <li><a target="_blank" href="game/yingshi/index.html"><b>全网影视解析🔍</b></a></li>
                   </ul>
                   <ul class="ul">
-                  <li><a target="_blank" href="game/tv/index.html"><b>我的影视网-暂时停用✖</b></a></li>
+                  <li><a target="_blank" href="game/tv/index.html"><b>我的影视网-暂时停用🤧</b></a></li>
                   </ul>
                   <ul class="ul">
-                      <li><a target="_blank" href="game/tv/jiexi"><b>影视解析—文字or链接🗡</b></a></li>
+                      <li><a target="_blank" href="game/tv/jiexi/404.html"><b>影视解析—文字or链接🎪</b></a></li>
                     </ul>
                 </div>
             </div>
