--- a/game/daohang/index.html
+++ b/game/daohang/index.html
@@ -689,6 +689,12 @@
                         <div><i class="iconfont icon-yunying"></i>影视网址</div>
                     </div>
                     <div>
+                         <a target="_blank" href="http://vv.lmih.cn/">
+                            <div class="item">
+                                <div class="logo"><img src="http://vv.lmih.cn/favicon.ico?v=20181127" alt="明月影视"> 明月影视</div>
+                                <div class="desc">电视，电影导航</div>
+                            </div>
+                        </a>
                         <a target="_blank" href="https://www.cupfox.com/">
                             <div class="item">
                                 <div class="logo"><img src="https://i.loli.net/2018/08/04/5b65b28a65aae.png" alt="电影狗"> 茶杯狐</div>
