--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
         </div>
         <!--2d板娘-->
-        <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
+        <script src="https://w1577791638.github.io/live2d/autoload.js"></script>
         <!--客服-->
         <script src="js/kefu.js"></script>
     <script>
