--- a/tb/Lx.html
+++ b/tb/Lx.html
@@ -24,7 +24,7 @@
             margin:-75px 0 0 -135px;
             } 
     </style>
-    <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
+    <script src="https://rr210.github.io/live2d/autoload.js"></script>
     <script src="https://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="../js/ab.js"></script>
     <script src="../js/kefu.js"></script>
